# stt_test

./: .env  .gitignore  CLAUDE.md  Dockerfile  GUIDE_ADD_ACTION.md  GUIDE_FRONTEND_DEV.md  GUIDE_INTEGRATION.md  GUIDE_TESTING.md  PLAN.md  README.md  TODOS.md  back.py  build.sh  cert.pem  docker-compose.yml  index.html  key.env.tmpl  key.pem  main.py  pyproject.toml  stt_actions.db
action-definition/: actions.registry.json  prompts
action-definition/metadata/: DATA_FETCH.meta.json  DEVICE_CONTROL.meta.json  FILE_DOWNLOAD.meta.json  MOVE_PAGE.meta.json  SHOW_MSG.meta.json
action-definition/schemas/: DATA_FETCH.schema.json  DEVICE_CONTROL.schema.json  FILE_DOWNLOAD.schema.json  MOVE_PAGE.schema.json  SHOW_MSG.schema.json
app/: main.py
app/api/: endpoints.py  health.py
app/core/: config.py  security.py
app/core/prompts/: action_selection.md  message_validation.md  parameter_extraction.md  system_prompt.md
app/models/: database.py  schemas.py
app/services/: action_manager.py  checkpoint.py  memory.py  nlu.py  nlu_core.py  stt.py  workflow.py
tests/: test_action_expansion.py  test_api.py  test_frontend_feedback.py  test_message_validation.py  test_nlu.py  test_nlu_actions.py  test_parameter_candidates.py
voicefile/: 새로운 녹음 2.m4a  새로운 녹음 3.m4a  새로운 녹음 4.m4a  새로운 녹음 5.m4a  새로운 녹음 6.m4a  새로운 녹음 7.m4a  새로운 녹음.m4a
