[project]
name = "stt-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "groq>=1.1.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "pydub>=0.25.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "speechrecognition>=3.16.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.42.0",
]
